--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "FileSize-Monitor",
   "description": "Displays the size of files in the project directory.",
   "version": "0.0.1",
+  "publisher": "mustafalanewala",
   "engines": {
     "vscode": "^1.92.0"
   },
@@ -37,11 +38,16 @@
     "lint": "eslint src --ext ts,js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.92.0",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
-    "eslint": "^9.9.1",
+    "@types/vscode": "^1.92.0",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "babel-loader": "^9.1.3",
+    "eslint": "^9.9.1",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
